:tada: Add 'email-verification' flag enabled by default
The main idea is deprecating the `insecure-register` flag with the more
general `email-verification` flag.

--- a/docker/images/config.env
+++ b/docker/images/config.env
@@ -6,11 +6,10 @@
 ## setting.
 
 PENPOT_PUBLIC_URI=http://localhost:9001
-PENPOT_TENANT=pro
 
 ## Feature flags.
 
-PENPOT_FLAGS="enable-registration enable-login"
+PENPOT_FLAGS="enable-registration enable-login disable-email-verification"
 
 ## Temporal workaround because of bad builtin default
 
@@ -43,7 +42,6 @@ PENPOT_TELEMETRY_ENABLED=true
 ## console, but for production usage is recommended to setup a real
 ## SMTP provider. Emails are used to confirm user registrations.
 
-PENPOT_SMTP_ENABLED=false
 PENPOT_SMTP_DEFAULT_FROM=no-reply@example.com
 PENPOT_SMTP_DEFAULT_REPLY_TO=no-reply@example.com
 # PENPOT_SMTP_HOST=
