:bug: Fix doubled quotes in frontend config
Docker parses environment variables literally, delivering quoted flags in the $PENPOT_FLAGS variable. This in turn leads to doubled quotes in the resulting config.js in front and after the flags, omitting them completely.

This commit fixes this behaviour.

--- a/docker/images/config.env
+++ b/docker/images/config.env
@@ -8,8 +8,7 @@
 PENPOT_PUBLIC_URI=http://localhost:9001
 
 ## Feature flags.
-
-PENPOT_FLAGS="enable-registration enable-login disable-email-verification"
+PENPOT_FLAGS=enable-registration enable-login disable-email-verification
 
 ## Temporal workaround because of bad builtin default
 
