--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,7 @@
     "watch-main": "shadow-cljs watch main",
     "watch-test": "clojure -M:dev:shadow-cljs watch test",
     "validate-translations": "node ./scripts/validate-translations.js",
+    "find-unused-translations": "node ./scripts/find-unused-translations.js",
     "test-e2e": "cypress run",
     "test-e2e-gui": "cypress open"
   },
