:recycle: Add admin facilities on the code base
- Fix bugs related to orphan teams on profile deletion
- Separate session based profile-id param from api user provided

--- a/docker/images/files/nginx.conf
+++ b/docker/images/files/nginx.conf
@@ -25,7 +25,7 @@ http {
     include /etc/nginx/mime.types;
     default_type application/octet-stream;
 
-    error_log /dev/stdout;
+    error_log /dev/stderr;
     access_log /dev/stdout;
 
     gzip on;
@@ -60,29 +60,6 @@ http {
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
 
         etag off;
-        root /var/www/app/;
-
-        location ~* \.(js|css).*$ {
-            add_header Cache-Control "max-age=86400" always; # 24 hours
-        }
-
-        location ~* \.(html).*$ {
-            add_header Cache-Control "no-cache, max-age=0" always;
-        }
-
-        location /api/export {
-            proxy_pass http://penpot-exporter:6061;
-        }
-
-        location /api {
-            proxy_pass http://penpot-backend:6060/api;
-        }
-
-        location /ws/notifications {
-            proxy_set_header Upgrade $http_upgrade;
-            proxy_set_header Connection 'upgrade';
-            proxy_pass http://penpot-backend:6060/ws/notifications;
-        }
 
         location @handle_redirect {
             set $redirect_uri "$upstream_http_location";
@@ -115,6 +92,36 @@ http {
             internal;
             alias /opt/data/assets;
             add_header x-internal-redirect "$upstream_http_x_accel_redirect";
+        }
+
+
+        location /api/export {
+            proxy_pass http://penpot-exporter:6061;
+        }
+
+        location /api {
+            proxy_pass http://penpot-backend:6060/api;
+        }
+
+        location /admin {
+            proxy_pass http://penpot-admin:6063/admin;
+        }
+
+        location /ws/notifications {
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection 'upgrade';
+            proxy_pass http://penpot-backend:6060/ws/notifications;
+        }
+
+        location / {
+            location ~* \.(js|css).*$ {
+                add_header Cache-Control "max-age=86400" always; # 24 hours
+            }
+
+            location ~* \.(html).*$ {
+                add_header Cache-Control "no-cache, max-age=0" always;
+            }
+            root /var/www/app/;
         }
     }
 }
