:tada: Add admin example service to default docker compose file

--- a/docker/images/files/nginx.conf
+++ b/docker/images/files/nginx.conf
@@ -90,10 +90,9 @@ http {
 
         location /internal/assets {
             internal;
-            alias /opt/data/assets;
+            alias /opt/penpot/assets;
             add_header x-internal-redirect "$upstream_http_x_accel_redirect";
         }
-
 
         location /api/export {
             proxy_pass http://penpot-exporter:6061;
@@ -104,7 +103,7 @@ http {
         }
 
         location /admin {
-            proxy_pass http://penpot-admin:6063/admin;
+            proxy_pass http://penpot-admin:6065/admin;
         }
 
         location /ws/notifications {
