--- a/docker/images/Dockerfile.backend
+++ b/docker/images/Dockerfile.backend
@@ -74,6 +74,7 @@ RUN set -ex; \
         fontconfig \
         woff-tools \
         woff2 \
+        python3 \
         fontforge \
     ; \
     echo "en_US.UTF-8 UTF-8" >> /etc/locale.gen; \
