:bug: Fix default nginx configuration for docker images

--- a/docker/images/files/nginx.conf
+++ b/docker/images/files/nginx.conf
@@ -102,9 +102,9 @@ http {
             proxy_pass http://penpot-backend:6060/api;
         }
 
-        location /admin {
-            proxy_pass http://penpot-admin:6065/admin;
-        }
+        # location /admin {
+        #     proxy_pass http://penpot-admin:6065/admin;
+        # }
 
         location /ws/notifications {
             proxy_set_header Upgrade $http_upgrade;
