:bug: Fix compatibility issues on docker upgrade path

--- a/docker/images/Dockerfile.backend
+++ b/docker/images/Dockerfile.backend
@@ -28,8 +28,10 @@ RUN set -ex; \
     ; \
     echo "en_US.UTF-8 UTF-8" >> /etc/locale.gen; \
     locale-gen; \
-    mkdir -p /opt/penpot/assets; \
+    mkdir -p /opt/data; \
+    mkdir -p /opt/penpot; \
     chown -R penpot:penpot /opt/penpot; \
+    chown -R penpot:penpot /opt/data; \
     rm -rf /var/lib/apt/lists/*;
 
 RUN set -eux; \
