--- a/docker/images/files/nginx.conf
+++ b/docker/images/files/nginx.conf
@@ -90,7 +90,7 @@ http {
 
         location /internal/assets {
             internal;
-            alias /opt/penpot/assets;
+            alias /opt/data/assets;
             add_header x-internal-redirect "$upstream_http_x_accel_redirect";
         }
 
