🐋 Add environment variables for specifying the export and backend url for the frontend docker image
Signed-off-by: Owen Bonneville <supernova@superdev.one>

--- a/docker/images/files/nginx.conf
+++ b/docker/images/files/nginx.conf
@@ -82,7 +82,7 @@ http {
         }
 
         location /assets {
-            proxy_pass http://penpot-backend:6060/assets;
+            proxy_pass $BACKEND_URL/assets;
             recursive_error_pages on;
             proxy_intercept_errors on;
             error_page 301 302 307 = @handle_redirect;
@@ -95,11 +95,11 @@ http {
         }
 
         location /api/export {
-            proxy_pass http://penpot-exporter:6061;
+            proxy_pass $EXPORT_URL;
         }
 
         location /api {
-            proxy_pass http://penpot-backend:6060/api;
+            proxy_pass $BACKEND_URL/api;
         }
 
         # location /admin {
@@ -109,7 +109,7 @@ http {
         location /ws/notifications {
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection 'upgrade';
-            proxy_pass http://penpot-backend:6060/ws/notifications;
+            proxy_pass $BACKEND_URL/ws/notifications;
         }
 
         location / {
