--- a/frontend/package.json
+++ b/frontend/package.json
@@ -62,6 +62,7 @@
     "luxon": "^3.1.1",
     "mousetrap": "^1.6.5",
     "opentype.js": "^1.3.4",
+    "postcss-modules": "^6.0.0",
     "randomcolor": "^0.6.2",
     "react": "~17.0.2",
     "react-dom": "~17.0.2",
