:paperclip: Add improved docstring for penpot_secret_key

--- a/docker/images/docker-compose.yaml
+++ b/docker/images/docker-compose.yaml
@@ -140,10 +140,10 @@ services:
       - PENPOT_FLAGS=enable-registration enable-login-with-password disable-email-verification enable-smtp enable-prepl-server
 
       ## Penpot SECRET KEY. It serves as a master key from which other keys for subsystems
-      ## (eg http sessions) are derived.
+      ## (eg http sessions, or invitations) are derived.
       ##
-      ## Leave it comment if it is ok for you to have to login again after each backend
-      ## restart.
+      ## If you leve it commented, all created sessions and invitations will
+      ## become invalid on container restart.
       ##
       ## If you going to uncomment this, we recommend use here a trully randomly generated
       ## 512 bits base64 encoded string.  You can generate one with:
