--- a/common/package.json
+++ b/common/package.json
@@ -7,12 +7,19 @@
     "luxon": "^3.3.0"
   },
   "scripts": {
-    "compile-and-watch-test": "clojure -M:dev:shadow-cljs watch test",
-    "compile-test": "clojure -M:dev:shadow-cljs compile test --config-merge '{:autorun false}'",
-    "run-test": "node target/test.js",
-    "test": "yarn run compile-test && yarn run run-test"
+    "wasm:build:resize:debug": "asc wasm/resize.ts --config asconfig.resize.json --target debug",
+    "wasm:build:resize:release": "asc wasm/resize.ts --config asconfig.resize.json --target release",
+    "wasm:build:transform:debug": "asc wasm/transform.ts --config asconfig.transform.json --target debug",
+    "wasm:build:transform:release": "asc wasm/transform.ts --config asconfig.transform.json --target release",
+    "wasm:build": "yarn run wasm:build:resize:release && yarn run wasm:build:transform:release",
+    "wasm:generate-types": "asc --transform ./scripts/wasm-generate-types.mjs wasm/resize.ts wasm/transform.ts",
+    "test:watch": "clojure -M:dev:shadow-cljs watch test",
+    "test:compile": "clojure -M:dev:shadow-cljs compile test --config-merge '{:autorun false}'",
+    "test:run": "node target/test.js",
+    "test": "yarn run test:compile && yarn run test:run"
   },
   "devDependencies": {
+    "assemblyscript": "^0.27.5",
     "shadow-cljs": "2.20.16",
     "source-map-support": "^0.5.21",
     "ws": "^8.11.0"
