--- a/frontend/package.json
+++ b/frontend/package.json
@@ -52,6 +52,7 @@
     "postcss-clean": "^1.2.2",
     "prettier": "^3.0.3",
     "rimraf": "^5.0.1",
+    "rxjs-spy": "^8.0.2",
     "sass": "^1.66.1",
     "shadow-cljs": "2.25.3"
   },
