--- a/docker/devenv/files/nginx.conf
+++ b/docker/devenv/files/nginx.conf
@@ -192,10 +192,18 @@ http {
         }
 
         location / {
+            location ~ ^/(/|css|fonts|images|js|wasm) {
+            }
+            
+            location ~ ^/[^/]+/(.*)$ {
+                return 301 /404.html;
+            }
+
             add_header Last-Modified $date_gmt;
             add_header Cache-Control 'no-store, no-cache, must-revalidate, proxy-revalidate, max-age=0';
             if_modified_since off;
             expires off;
+            try_files $uri /index.html$is_args$args =404;
         }
     }
 }
