--- a/docker/gitpod/files/nginx.conf
+++ b/docker/gitpod/files/nginx.conf
@@ -131,6 +131,15 @@ http {
 
         location / {
             add_header Cache-Control "no-cache, max-age=0";
+
+            location ~ ^/(/|css|fonts|images|js|wasm) {
+            }
+            
+            location ~ ^/[^/]+/(.*)$ {
+                return 301 /404.html;
+            }
+
+            try_files $uri /index.html$is_args$args =404;
         }
     }
 }
