--- a/docker/images/files/nginx.conf
+++ b/docker/images/files/nginx.conf
@@ -168,7 +168,16 @@ http {
             location ~* \.(html).*$ {
                 add_header Cache-Control "no-cache, max-age=0" always;
             }
+            
+            location ~ ^/(/|css|fonts|images|js|wasm) {
+            }
+            
+            location ~ ^/[^/]+/(.*)$ {
+                return 301 /404.html;
+            }
+
             root /var/www/app/;
+            try_files $uri /index.html$is_args$args =404;
         }
     }
 }
