:bug: Fix 404 errors

--- a/docker/devenv/files/nginx.conf
+++ b/docker/devenv/files/nginx.conf
@@ -196,7 +196,7 @@ http {
             }
             
             location ~ ^/[^/]+/(.*)$ {
-                return 301 /404.html;
+                return 301 " /404";
             }
 
             add_header Last-Modified $date_gmt;
