--- a/docker/gitpod/files/nginx.conf
+++ b/docker/gitpod/files/nginx.conf
@@ -136,7 +136,7 @@ http {
             }
             
             location ~ ^/[^/]+/(.*)$ {
-                return 301 /404.html;
+                return 301 " /404";
             }
 
             try_files $uri /index.html$is_args$args =404;
