--- a/docker/images/files/nginx.conf
+++ b/docker/images/files/nginx.conf
@@ -173,7 +173,7 @@ http {
             }
             
             location ~ ^/[^/]+/(.*)$ {
-                return 301 /404.html;
+                return 301 " /404";
             }
 
             root /var/www/app/;
