--- a/frontend/package.json
+++ b/frontend/package.json
@@ -65,7 +65,7 @@
     "postcss-modules": "^6.0.0",
     "randomcolor": "^0.6.2",
     "react": "18",
-    "react-dom": "18",
+    "react-dom": "^18.2.0",
     "react-virtualized": "^9.22.3",
     "rxjs": "~7.8.1",
     "sax": "^1.2.4",
