:zap: Allow passing overrides to frontend nginx config

--- a/docker/images/files/nginx.conf
+++ b/docker/images/files/nginx.conf
@@ -50,6 +50,8 @@ http {
     proxy_cache_valid any 48h;
     proxy_cache_key "$host$request_uri";
 
+    include /etc/nginx/overrides.d/*.conf;
+
     server {
         listen 80 default_server;
         server_name _;
